--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         Укажите свой API-ключ. Тестовый ключ НЕ БУДЕТ работать на других сайтах.
         Получить ключ можно в Кабинете разработчика: https://developer.tech.yandex.ru/keys/
     -->
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=<477b7c6c-1de9-4877-bc32-f29508ee82e4>"
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=477b7c6c-1de9-4877-bc32-f29508ee82e4"
         type="text/javascript"></script>
     <script src="event_reverse_geocode.js" type="text/javascript"></script>
     <style type="text/css">
