--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Определение адреса клика на карте с помощью обратного геокодирования</title>
+    <title>Тестовое задание Гуцол Иван</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- Подключаем yandex.map API  -->
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=477b7c6c-1de9-4877-bc32-f29508ee82e4"
