--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <!-- Подключаем yandex.map API  -->
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=477b7c6c-1de9-4877-bc32-f29508ee82e4"
         type="text/javascript"></script>
-    <!-- Подключаем внешнишний файл JS, в котором будет реализован скрипт,
-         определяющий адрес по координатам и событие(click),при котором появляется адрес   -->
+    <!-- Подключаем внешнишний файл JS, в котором будет реализован скрипт создающий карту 
+        Yandex, а так же определяющий адрес по координатам и событие(click),
+        при котором появляется адрес   -->
     <script src="event_reverse_geocode.js" type="text/javascript"></script>
     <!-- Подключаем внешний файл css  -->
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+    <!-- Создаем контейнер для Yandex.Map  -->
     <div id="map"></div>
 </body>
 
