change font - size 30px

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!-- Создаем контейнер для Yandex.Map  -->
+    <!-- Создаем контейнер для Yandex.Map. В этот div API вставит карту  -->
     <div id="map"></div>
 </body>
 
